# JSGFDeducer

./: CMakeLists.txt  LICENSE  README.md
include/dict/: matcher.h
include/jsgf/: case.h  ckd_alloc.h  glist.h  hash_table.h  jsgf.h  jsgf_internal.h  prim_type.h  strfuncs.h
include/util/: printer.h  splitter.h  timer.h
include/wfst/: parser.h  rule.h
src/dict/: dict_matcher.cpp  regex_matcher.cpp
src/jsgf/: _jsgf_scanner.l  case.c  ckd_alloc.c  dtoa.c  glist.c  hash_table.c  jsgf.c  jsgf_parser.c  jsgf_parser.y  jsgf_scanner.c  jsgf_scanner.h  strfuncs.c
src/util/: printer.cpp  splitter.cpp  timer.cpp
src/wfst/: parser.cpp  rule.cpp
test/: BatchTest.cpp  DictMatcherTest.cpp  JsgfGramTest.cpp  PrinterTest.cpp  SplitterTest.cpp  WfstParserTest.cpp
test/dict/: music.vocab  musician.vocab  nomean.vocab  sogou.vocab  topic.vocab  weather.vocab
test/gram/: music.gram  music_apple.gram  music_lai.gram  music_shou.gram  music_veryslow.gram  system_settings.gram  system_settings_min.gram  test2.gram  test3.gram  test4.gram  test7.gram  test8.gram  test9.gram  weather_min.gram  weather_mini.gram  weather_test.gram
